--- a/src/styles/all.css
+++ b/src/styles/all.css
@@ -11,7 +11,10 @@
 @import url("../components/column-chart/style.css");
 @import url("../components/product-form/style.css");
 
+
 /* Styles for pages  */
 /* pages */
 @import url("../pages/style.css");
 @import url("../pages/dashboard/style.css");
+@import url("../pages/products/list/style.css");
+@import url("../pages/categories/style.css");
