--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,6 +5,7 @@
   --middle-blue: #9fd7f9;
   --yellow: #ffb946;
   --red: #f7685b;
+  --light-red: #f6897d;
   --green: #2ed47a;
   --purple: #885af8;
   --black: #192a3e;
