--- a/src/components/sortable-list/style.css
+++ b/src/components/sortable-list/style.css
@@ -22,7 +22,7 @@
 
 .sortable-list__item[data-grab-handle],
 .sortable-list__item [data-grab-handle] {
-  cursor: grab;
+  cursor: pointer;
 }
 
 .sortable-list__item [data-delete-handle] {
@@ -78,6 +78,7 @@
 }
 
 .sortable-list__placeholder {
+  list-style: none;
   border: 1px solid var(--blue);
   margin: 3px 0;
   border-radius: 4px;
